fix: z-index

--- a/packages/application-shell/src/components/navbar/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar.mod.css
@@ -449,7 +449,8 @@
   min-height: 50px;
   width: 253px;
   border-radius: 8px;
-  z-index: 1;
+  /* z-index value must be higher than AppBar's z-index */
+  z-index: 20001;
   box-shadow: -2px 4px 25px 0 rgba(89, 89, 89, 0.5);
 }
 
